Pascal/test/cohadar/pascal/errors/await_outside.pas
program test;
var a: shared integer;
	
begin
	await (a = 0);
	
	region a do begin 
	end;
end.